...
        android:textSize="10sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start Game"
        android:id="@+id/startGameButton"
        android:layout_gravity="center|bottom"
        android:background="@android:color/holo_red_dark"
        android:textColor="#fcfcf9"
        android:elegantTextHeight="false"
        android:focusable="false"
        android:singleLine="false"
...
